--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.4",
     "gray-matter": "^4.0.3",
-    "js-cookie": "^3.0.5",
     "next": "14.0.1",
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
@@ -21,6 +20,7 @@
     "react-feather": "^2.0.10"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -28,6 +28,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "eslint-config-prettier": "^9.0.0",
+    "js-cookie": "^3.0.5",
     "postcss": "^8",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
